--- a/roles/infra_storage/tasks/setup_fdroid.yml
+++ b/roles/infra_storage/tasks/setup_fdroid.yml
@@ -34,50 +34,44 @@
     dest: "/{{ DATACORE }}/fdroid/config/config.in.py"
     mode: u=rw,g=r,o=r
 
-- name: "Launch fdroid container for ARM {{ FDROID_VERSION }}"
-  docker_container:
-    name: "fdroid"
-    image: "ngargaud/fdroid-server:arm-{{ FDROID_VERSION }}"
-    state: "{{FDROID_DEFAULT_STATE }}"
-    restart_policy: always
-    recreate: yes
-    timeout: "{{ DOCKER_TIMEOUT }}"
-    ports:
-      - "{{ FDROID_PORT }}:80"
-      - "{{ FDROID_SSH_PORT }}:22"
-    volumes:
-      - "/{{ DATACORE }}/fdroid/apk:/opt/apk"
-      - "/{{ DATACORE }}/fdroid/config:/opt/config"
-    labels:
-      traefik.enable: "{{ FDROID_EXPOSITION }}"
-      traefik.http.services.fdroid.loadbalancer.server.port: "80"
-      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
-      traefik.http.routers.fdroid_http.middlewares: "https_redirect"
-      traefik.http.routers.fdroid_http.rule: "Host(`{{ FDROID_EXTERNAL_URL }}`)"
-      traefik.http.routers.fdroid_https.rule: "Host(`{{ FDROID_EXTERNAL_URL }}`)"
-      traefik.http.routers.fdroid_https.tls: "true"
+- name: "Define fdroid_image ARM?"
+  set_fact:
+     fdroid_image: "ngargaud/fdroid-server:arm-{{ FDROID_VERSION }}"
   when: ansible_architecture in ["armv7l", "aarch64"]
 
-- name: "Launch fdroid container for x86_64 {{ FDROID_VERSION }}"
+- name: "Define fdroid_image amd64?"
+  set_fact:
+     fdroid_image: "ngargaud/fdroid-server:{{ FDROID_VERSION }}"
+  when: ansible_architecture in ["amd64", "x86_64"]
+
+- name: "Launch fdroid container {{ FDROID_VERSION }}"
   docker_container:
     name: "fdroid"
-    image: "ngargaud/fdroid-server:{{ FDROID_VERSION }}"
+    image: "{{ fdroid_image }}"
     state: "{{FDROID_DEFAULT_STATE }}"
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
-      - "{{ FDROID_PORT }}:80"
+#      - "{{ FDROID_PORT }}:80"
       - "{{ FDROID_SSH_PORT }}:22"
     volumes:
       - "/{{ DATACORE }}/fdroid/apk:/opt/apk"
       - "/{{ DATACORE }}/fdroid/config:/opt/config"
     labels:
-      traefik.enable: "{{ FDROID_EXPOSITION }}"
+      traefik.enable: "true"
       traefik.http.services.fdroid.loadbalancer.server.port: "80"
       traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
       traefik.http.routers.fdroid_http.middlewares: "https_redirect"
       traefik.http.routers.fdroid_http.rule: "Host(`{{ FDROID_EXTERNAL_URL }}`)"
+      traefik.http.routers.fdroid_http.service: fdroid
       traefik.http.routers.fdroid_https.rule: "Host(`{{ FDROID_EXTERNAL_URL }}`)"
+      traefik.http.routers.fdroid_https.service: fdroid
       traefik.http.routers.fdroid_https.tls: "true"
-  when: ansible_architecture in ["amd64", "x86_64"]
+      # add this to use traefik as a proxy with tls (http will not be available)
+      traefik.http.services.fdroid_proxy.loadbalancer.server.port: "80"
+      traefik.http.routers.fdroid_proxy.service: fdroid_proxy
+      traefik.http.routers.fdroid_proxy.entrypoints: fdroid
+      traefik.http.routers.fdroid_proxy.rule: "{{ global_proxy_rule }}"
+      traefik.http.routers.fdroid_proxy.tls: "true"
+  when: fdroid_image is defined
