stop netdata by default

--- a/roles/infra/vars/main.yml
+++ b/roles/infra/vars/main.yml
@@ -40,4 +40,4 @@ PORTAINER_EXTERNAL_URL: "portainer.{{ DOMAIN_NAME }}"
 NETDATA_VERSION: "v1.23.0"
 NETDATA_PORT: "8011"
 NETDATA_EXTERNAL_URL: "monitor.{{ DOMAIN_NAME }}"
-NETDATA_DEFAULT_STATE: started
+NETDATA_DEFAULT_STATE: stopped
