--- a/roles/infra_ci/tasks/setup_gogs.yml
+++ b/roles/infra_ci/tasks/setup_gogs.yml
@@ -12,6 +12,7 @@
 - name: "Launch gogs container {{ GOGS_VERSION }}"
   docker_container:
     name: "gogs"
+    hostname: "gogs"
     image: "{{ gogs_image }}"
     state: "{{ GOGS_DEFAULT_STATE }}"
     restart_policy: always
@@ -49,22 +50,6 @@
   stat:
     path: "/{{ DATACORE }}/gogs/gogs/conf/app.ini"
   register: stat_gogs_config
-
-- name: "Ensure DOMAIN is correct (first configuration is required before)"
-  ini_file:
-    path: "/{{ DATACORE }}/gogs/gogs/conf/app.ini"
-    section: server
-    option: DOMAIN
-    value: "{{ GOGS_EXTERNAL_URL }}"
-  when: stat_gogs_config.stat.exists == true
-
-- name: "Ensure ROOT_URL is correct (first configuration is required before)"
-  ini_file:
-    path: "/{{ DATACORE }}/gogs/gogs/conf/app.ini"
-    section: server
-    option: ROOT_URL
-    value: "https://{{ GOGS_EXTERNAL_URL }}"
-  when: stat_gogs_config.stat.exists == true
 
 - name: "Ensure SSH_PORT is correct (first configuration is required before)"
   ini_file:
