--- a/roles/infra_ci/vars/main.yml
+++ b/roles/infra_ci/vars/main.yml
@@ -2,11 +2,12 @@ GOGS_VERSION: "0.11.91"
 GOGS_FRONT_PORT: "8021"
 GOGS_SSH_PORT: "{{ GIT_SSH_PORT }}"
 GOGS_EXTERNAL_URL: "git.{{ DOMAIN_NAME }}"
+GOGS_URL: "https://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ GOGS_FRONT_PORT }}"
 GOGS_DEFAULT_STATE: stopped
 
 # Use https://updates.jenkins-ci.org/download/war/ to get the version package checksum
-JENKINS_VERSION: "2.255"
-JENKINS_SHA_256: "fde80b0f9c98e54ed5ed3d7bbb72e003043e014beb1739e8b81d4e1d5f788169"
+JENKINS_VERSION: "2.256"
+JENKINS_SHA_256: "ac59d1acca37baf9e42e9599ce654d18b0810a1643a71ff4ac9e6153a9a1a4b8"
 JENKINS_PORT: "8023"
 JENKINS_EXTERNAL_URL: "ci.{{ DOMAIN_NAME }}"
 JENKINS_DEFAULT_STATE: stopped
