--- a/roles/infra_storage/tasks/setup_nexus.yml
+++ b/roles/infra_storage/tasks/setup_nexus.yml
@@ -128,6 +128,7 @@
     status_code: 200,204
     body:
       admin_name: "{{ DEFAULT_ADMIN_NAME }}"
+      admin_email: "{{ USER_MAIL }}"
       admin_password: "{{ NEXUS_ADMIN_PASS }}"
       docker_push_port: "{{ NEXUS_DOCKER_PUSH_PORT }}"
       docker_pull_port: "{{ NEXUS_DOCKER_PULL_PORT }}"
