--- a/roles/infra_hard/vars/main.yml
+++ b/roles/infra_hard/vars/main.yml
@@ -10,7 +10,7 @@ NODERED_FRONT_PORT: "8031"
 NODERED_EXTERNAL_URL: "flows.{{ DOMAIN_NAME }}"
 NODERED_DEFAULT_STATE: stopped
 
-OCTOPRINT_VERSION: "latest"
+OCTOPRINT_VERSION: "1.5.1"
 OCTOPRINT_PORT: "8033"
 OCTOPRINT_EXTERNAL_URL: "printers.{{ DOMAIN_NAME }}"
 OCTOPRINT_DEVICE_0: "/dev/null"
