add configure_mailer for jenkins

--- a/roles/infra_ci/tasks/setup_jenkins.yml
+++ b/roles/infra_ci/tasks/setup_jenkins.yml
@@ -93,6 +93,7 @@
     - "03-install-plugins.groovy"
     - "04-add-credentials.groovy"
     - "05-global-envvars.groovy"
+    - "06-configure-mailer.groovy"
 
 - name: "Set isSetupComplete to avoid getting started wizard"
   lineinfile:
