--- a/roles/infra/files/traefik/tls-certs.toml
+++ b/roles/infra/files/traefik/tls-certs.toml
@@ -2,5 +2,5 @@
 [tls.stores]
   [tls.stores.default]
     [tls.stores.default.defaultCertificate]
-      keyFile = "/certs/{{ TRAEFIK_CERT_NAME }}-key.pem"
-      certFile = "/certs/{{ TRAEFIK_CERT_NAME }}.pem"
+      keyFile = "/certs/{{ DOMAIN_CERT_KEY_NAME }}"
+      certFile = "/certs/{{ DOMAIN_CERT_NAME }}"
