--- a/roles/infra/tasks/setup_backup.yml
+++ b/roles/infra/tasks/setup_backup.yml
@@ -7,7 +7,7 @@
     cache_valid_time: 3600
 
 - name: "Create local backup before update"
-  shell: "tar cvpzf /home/{{ USER_NAME }}/data_{{ FORGE_MODE }}_ansible_backup.tar.gz /{{ DATACORE }}"
+  shell: "tar cvpzf /home/{{ USER_NAME }}/data_{{ IDENTITY }}_ansible_backup.tar.gz /{{ DATACORE }}"
 
 - name: "Copy backup task template in cron.d"
   copy:
@@ -20,12 +20,12 @@
 - name: "Add the line to backup the datacore in the cron script"
   lineinfile:
     path: /etc/cron.d/duplicity.full
-    line: "PASSPHRASE='{{ BACKUP_PASS }}' duplicity full -v 9 --rsync-options='-p' /{{ DATACORE }} 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ FORGE_MODE }}'"
+    line: "PASSPHRASE='{{ BACKUP_PASS }}' duplicity full -v 9 --rsync-options='-p' /{{ DATACORE }} 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ IDENTITY }}'"
 
 - name: "Add a line to delete old backups in the cron script"
   lineinfile:
     path: /etc/cron.d/duplicity.full
-    line: "PASSPHRASE='{{ BACKUP_PASS }}' duplicity remove-all-but-n-full 3 --force 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ FORGE_MODE }}'"
+    line: "PASSPHRASE='{{ BACKUP_PASS }}' duplicity remove-all-but-n-full 3 --force 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ IDENTITY }}'"
 
 - name: "Add full backup task in crontab"
   cron:
@@ -35,10 +35,10 @@
     user: root
     job: /etc/cron.d/duplicity.full
 
-- name: "Create initial remote backup before update in '{{ FORGE_MODE }}'"
+- name: "Create initial remote backup before update in '{{ IDENTITY }}'"
   shell: "/etc/cron.d/duplicity.full"
   when: BACKUP_MODE == "create"
 
-- name: "Restore last remote backup before recontruction from '{{ FORGE_MODE }}'"
-  shell: "rm -rf /{{ DATACORE }} && PASSPHRASE='{{ BACKUP_PASS }}' duplicity restore --rsync-options='-p' 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ FORGE_MODE }}' /{{ DATACORE }}"
+- name: "Restore last remote backup before recontruction from '{{ IDENTITY }}'"
+  shell: "rm -rf /{{ DATACORE }} && PASSPHRASE='{{ BACKUP_PASS }}' duplicity restore --rsync-options='-p' 'ftp://{{ BACKUP_REMOTE_USER }}:{{ BACKUP_REMOTE_PASS }}@{{ BACKUP_REMOTE_URL }}/{{ BACKUP_REMOTE_PATH }}/{{ IDENTITY }}' /{{ DATACORE }}"
   when: BACKUP_MODE == "restore"
