--- a/roles/infra_ci/vars/main.yml
+++ b/roles/infra_ci/vars/main.yml
@@ -28,9 +28,15 @@ JENKINS_CONFIGURATION:
   jenkins_smtp_host: ""
   jenkins_email_suffix: ""
 JENKINS_CREDENTIALS:
-  master2slaves_key: "{{ master2slave_private_key }}"
-  git_deploy_key: "{{ git_deploy_private_key }}"
-  fdroid_deploy_key: "{{ git_deploy_private_key }}"
+  git_deploy_key:
+    private_key: "{{ git_deploy_private_key }}"
+    username: "{{ git_deploy_username | default('builder') }}"
+  master2slaves_key:
+    private_key: "{{ master2slave_private_key }}"
+    username: "{{ master2slave_username | default('builder') }}"
+  fdroid_deploy_key:
+    private_key: "{{ git_deploy_private_key }}"
+    username: "root"
   nexus_docker_credentials:
     username: "{{ nexus_deploy_username }}"
     password: "{{ nexus_deploy_password }}"
